--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -1,29 +1,93 @@
 {% extends "student_base.html" %}
+{% load staticfiles %}
 {% load i18n %}
-{% block title %}My courses{% endblock %}
+
+
+{% block title %}My Courses{% endblock %}
 {% block content %}
 
-<div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
-    <h1 class="h3 mb-0 text-gray-800">{% trans 'My courses' %}</h1>
-</div>
 
-<div class="container">
+
+<div class="container-fluid">
+
+    <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+        <h1 class="h3 mb-0 text-gray-800">{% trans 'My Courses' %}</h1>
+    </div>
+
     <div class="row">
         {% for course in object_list %}
         {% if course.modules.count > 0 %}
         <div class="col-md-6">
-            <h3>{{ course.title }}</h3>
-            <p><a href="{% url 'student_course_detail' course.id %}"
-                    class="btn btn-primary">{% trans 'Access contents' %}</a></p>
+
+            <div class="card">
+                <div class="card-header">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="student-student-take-course.html">
+                                <img src="{% static '/images/gulp.png' %}" alt="" width="100" class="rounded">
+                            </a>
+                        </div>
+                        <div class="media-body ml-3">
+                            <h5 class="card-title m-0">
+                                {{ course.title }}
+                            </h5>
+                            <small class="text-muted">Modules: {{course.modules.count}}</small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="progress rounded-0" style="height: 2px;">
+                    <div class="progress-bar progress-bar-sm progress-bar-striped bg-dark" role="progressbar"
+                        style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <div class="card-footer bg-white">
+                    <div class="row">
+                        <div class="col">
+                            <p>
+                                Instructor: {{course.owner}}
+                            </p>
+                        </div>
+
+                        <div class="col text-right">
+                            <a href="{% url 'student_course_detail' course.id %}" class="btn btn-primary">
+                                {% trans 'Continue' %} <i class="fa fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
         {% endif %}
+
         {% empty %}
-        <p>
-            {% trans 'You are not enrolled in any courses yet.' %}
-            <a href="{% url 'course_list' %}" class="link">{% trans 'Browse courses' %}</a>
-            {% trans 'to enroll in a course.' %}
-        </p>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <p>
+                        {% trans 'You are not enrolled in any courses yet.' %}
+                        <a href="{% url 'course_list' %}" class="link">{% trans 'Browse courses' %}</a>
+                        {% trans 'to enroll in a course.' %}
+                    </p>
+
+                </div>
+            </div>
+        </div>
+
         {% endfor %}
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+
+<style>
+    .card {
+  box-shadow: 2px 2px 2px -1px rgba(113,109,109,0.75);
+-webkit-box-shadow: 2px 2px 2px -1px rgba(113,109,109,0.75);
+-moz-box-shadow: 2px 2px 2px -1px rgba(113,109,109,0.75);
+    }
+</style>
 {% endblock %}
