--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -17,7 +17,7 @@
     <div class="row">
         {% for course in object_list %}
         {% if course.modules.count > 0 %}
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3 ">
 
             <div class="card">
                 <div class="card-header">
