--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -22,10 +22,8 @@
             <div class="card">
                 <div class="card-header">
                     <div class="media">
-                        <div class="media-left">
-                            <a href="student-student-take-course.html">
-                                <img src="{% static '/images/gulp.png' %}" alt="" width="100" class="rounded">
-                            </a>
+                        <div class="media-left bg-secondary px-3 py-1">
+                        <i class="fa fa-book text-white"></i>
                         </div>
                         <div class="media-body ml-3">
                             <h5 class="card-title m-0">
