--- a/students/templates/courses/content/video.html
+++ b/students/templates/courses/content/video.html
@@ -1,4 +1,24 @@
-<div class="video-item embed-responsive embed-responsive-21by9 mb-2" url="{{item.url}}">
+<div class="video-item" url="{{item.url}}">
 
-  <iframe class="embed-responsive-item" src="{{item.url}}" allowfullscreen></iframe>
+  {% if 'http' in item.url %}
+  <div class="embed-responsive embed-responsive-21by9 mb-2">
+    <iframe class="embed-responsive-item" id="videoFrame" src="{{item.url}}" allowfullscreen></iframe>
+  </div>
+  {% else %}
+
+  <video id="myVideo" class="video-js" controls>
+
+    <source src="{{item.url}}" type="video/mp4" />
+
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a
+      web browser that
+      <a href="#" target="_blank">supports HTML5 video</a>
+    </p>
+
+  </video>
+
+  {% endif %}
+
+
 </div>
