--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>NYC - Admin - {% block title %}{% endblock %}</title>
+  <title>NYC - Admin {% block title %}{% endblock %}</title>
 
   <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/logo5.png" %}">
 
@@ -76,8 +76,8 @@
           <!-- Topbar Navbar -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-dark" href="{% url 'admin_users' %}">
-                <i class="fas fa-users fa-fw mr-2"></i> Users
+              <a class="nav-link text-dark" href="{% url 'admin_students' %}">
+                <i class="fas fa-users fa-fw mr-2"></i> Students
               </a>
             </li>
           </ul>
@@ -142,18 +142,20 @@
   </a>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="{% static "/sb-admin/vendor/jquery/jquery.min.js" %}"></script>></script>
-  <script src="{% static "/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>></script>
+  <script src="{% static "/sb-admin/vendor/jquery/jquery.min.js" %}"></script>
+  <script src="{% static "/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="{% static "/sb-admin/vendor/jquery-easing/jquery.easing.min.js" %}"></script>></script>
+  <script src="{% static "/sb-admin/vendor/jquery-easing/jquery.easing.min.js" %}"></script>
 
   <script src="{% static "/sb-admin/vendor/datatables/jquery.dataTables.min.js" %}"></script>
   <script src="{% static "/sb-admin/vendor/datatables/dataTables.bootstrap4.min.js" %}"></script>
+  <script src="{% static "/sb-admin/vendor/jquery.form.min.js" %}"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
+
   <!-- Custom scripts for all pages-->
   <script src="{% static "/sb-admin/js/sb-admin-2.min.js" %}"></script>
 
@@ -166,6 +168,7 @@
       $("#sidebarToggle").trigger('click');
     });
   </script>
+  
 </body>
 
 </html>
