dashboard fixed spinner

--- a/app_admin/templates/students/list.html
+++ b/app_admin/templates/students/list.html
@@ -477,8 +477,8 @@
                                     getStudentCourses();
 
                                     $("#courseModal .spinner-border")
-                                        .removeClass('d-none');
-                                        
+                                        .addClass('d-none');
+
                                     $("#courseModal button").attr('disabled',
                                         false);
 
