--- a/app_public/templates/sst/verify.html
+++ b/app_public/templates/sst/verify.html
@@ -18,6 +18,7 @@
 </div>
 
 <div class="regular-page-area section-padding-50">
+
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -34,21 +35,39 @@
 
                     </p>
 
+
                     <div class="row">
-                        <div class="col-lg-6">
-                            <div class="card mt-4">
+                        <div class="col-lg-12">
+                            <div class="card my-4">
                                 <div class="card-body">
+
                                     <form id="fm">
-                                        <div class="form-group clearfix">
-                                            <label for="exampleInputEmail1">Card Number</label>
-                                            <input type="text" class="form-control" id="txtCardNumber" />
+
+                                        <div class="row">
+
+                                            <div class="col">
+                                                <div class="clearfix">
+                                                    <label for="exampleInputEmail1">Card Number</label>
+                                                    <input type="text" class="form-control" id="txtCardNumber"
+                                                        name="card_number" />
+                                                </div>
+
+                                            </div>
+                                            <div class="col">
+                                                <div class="mt-4 p-1">
+                                                    <button type="button" class="btn btn-primary" id="btnVerify">Submit
+                                                        Verify</button>
+                                                    <button type="button" class="btn btn-secondary"
+                                                        id="btnClear">Clear</button>
+                                                </div>
+
+                                            </div>
+
                                         </div>
 
-                                        <div class="mt-3">
-                                            <button type="button" class="btn btn-primary" id="btnVerify">Submit
-                                                Verify</button>
-                                            <button type="button" class="btn btn-secondary" id="btnClear">Clear</button>
-                                        </div>
+
+
+
 
                                         <div class="text-right">
                                             <div class="spinner-border text-primary d-none" role="status">
@@ -60,25 +79,141 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-lg-6">
-
-                        </div>
                     </div>
 
+                    <div class="card" id="sstDetails"></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+{% verbatim %}
+<script type="text/x-handlebars-template" id='detailItemTemplate'>
+
+    <div class="row">
+
+    <div class="col-md-4">
+        <div class="card1">
+            <div class="card-body">
+                <div class="d-flex flex-column align-items-center text-center">
+
+                    {{#if student.image}}
+                    <img src="{{student.image}}" width="150">
+                    {{else}}
+                    <img src="https://via.placeholder.com/150" width="150">
+                    {{/if}}
+
+                    <div class="mt-3">
+                        <h5>{{student.first_name}} {{student.last_name}} </h5>
+                        <p class="text-secondary mb-1">ID: {{card_id}}</p>
+                        <p class="text-muted font-size-sm">
+                            {{card_type}}
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="col-md-8">
+
+        <div class="card1 mb-3">
+            <div class="card-body">
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Full Name</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{student.first_name}} {{student.last_name}}</div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Card ID</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{card_id}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Card Type</h6>
+                    </div>
+                    <div class="col-sm-8 text-secondary"> {{card_type}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Issued</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{issued}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Expired</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{expired}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Status</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{renew_status}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Email</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{student.email}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Phone</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{student.cell_number}} </div>
+                </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">INFO</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> Height: {{student.person_height}} , Eyes: {{student.person_eyes_color}} </div>
+                </div>
+                <hr>
+                
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Address</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary"> {{student.address}} </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+</script>
+{% endverbatim %}
 
 {% endblock %}
 
 {% block scripts %}
-
-
-
 <script>
     (function ($) {
 
@@ -88,38 +223,70 @@
 
             var settings = $.extend({}, options);
 
+            var getNumber = function (cardNumber) {
+
+                var cNum = $("#txtCardNumber").val();
+
+                $("#fm .alert").remove();
+
+                if (cNum) {
+
+                    $("#fm .spinner-border").removeClass('d-none');
+                    $("#fm input").attr('disabled', true);
+                    $("#fm button").attr('disabled', true);
+
+                    $.get('/api/sst-cards/?format=json', {
+                        card_number: cNum
+                    }, function (response) {
+                        onGetNumberResponse(response);
+                    });
+                } else {
+                    toastr.warning('Please provide the number');
+                }
+            };
+
+            var onGetNumberResponse = function (response) {
+
+                $("#fm .spinner-border").addClass('d-none');
+                $("#fm input").attr('disabled', false);
+                $("#fm button").attr('disabled', false);
+
+                $("#fm .alert").remove();
+
+                $("#sstDetails").empty();
+
+                if (response.length > 0) {
+                    var item = response[0];
+
+                    var source = document.getElementById("detailItemTemplate").innerHTML;
+                    var template = Handlebars.compile(source);
+                    $("#sstDetails").html(template(item));
+
+                } else {
+                    var alert = $("<div />", {
+                        class: 'alert alert-primary mt-3'
+                    }).html('Card number is not valid.');
+
+                    $("#fm").append(alert);
+                }
+            };
 
             var registerEvent = function () {
 
                 $("div").on("click", '#btnVerify', function (e) {
                     e.stopPropagation();
-                    $("#fm .spinner-border").removeClass('d-none');
-                    $("#fm input").attr('disabled', true);
-                    $("#fm button").attr('disabled', true);
-                    $("#fm .alert").remove();
 
-                    setTimeout(function () {
 
-                        $("#fm .spinner-border").addClass('d-none');
-                        $("#fm input").attr('disabled', false);
-                        $("#fm button").attr('disabled', false);
+                    getNumber();
 
-                        $("#fm .alert").remove();
-
-                        var alert = $("<div />", {
-                            class: 'alert alert-primary mt-3'
-                        }).html('Card number is not valid.');
-
-                        $("#fm").append(alert);
-
-                    }, 2000);
                 });
 
 
                 $("div").on("click", '#btnClear', function (e) {
                     e.stopPropagation();
                     $("#txtCardNumber").val(null);
-                     $("#fm .alert").remove();
+                    $("#fm .alert").remove();
+                     $("#sstDetails").empty();
                 });
 
 
