--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -108,7 +108,7 @@
 
                                 <li><a href="{% url 'about_detail' %}">About Us</a></li>
                                 <li><a href="{% url 'contact_detail' %}">Contact Us</a></li>
-                                <li><a href="{% url 'sst_verify' %}">SST Card</a></li>
+                                <li><a href="{% url 'sst_verify' %}">SST CARD Verification </a></li>
                             </ul>
 
                             <!-- Search Button -->
