--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -247,10 +247,11 @@
 
             $.get('/api/subjects', {}, function (response) {
                 $(response).each(function (indx, item) {
-                    var href = 'course/subject/' + item.slug;
+                    var href = '/course/subject/' + item.slug;
                     $(".courses-menu ul").append('<li><a href="' + href + '"">' + item.title +
                         '</a></li>');
                 });
+
             });
         }
     </script>
