--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -14,7 +14,7 @@
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
-      <!-- Custom styles for this template-->
+  <!-- Custom styles for this template-->
   <link href="{% static "/sb-admin/css/sb-admin-2.css" %}" rel="stylesheet">
 
   <link href="{% static "/sb-admin/vendor/datatables/dataTables.bootstrap4.min.css" %}" rel="stylesheet">
@@ -47,6 +47,25 @@
       </li>
 
 
+      <!-- Divider -->
+      <hr class="sidebar-divider my-0">
+
+      <!-- Nav Item - Dashboard -->
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'admin_students' %}">
+          <i class="fas fa-fw fa-users"></i>
+          <span>Students</span></a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider my-0">
+
+      <!-- Nav Item - Dashboard -->
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'admin_students' %}">
+          <i class="fas fa-fw fa-network-wired"></i>
+          <span>Staff</span></a>
+      </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
@@ -78,6 +97,11 @@
             <li class="nav-item">
               <a class="nav-link text-dark" href="{% url 'admin_students' %}">
                 <i class="fas fa-users fa-fw mr-2"></i> Students
+              </a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link text-dark" href="{% url 'admin_students' %}">
+                <i class="fas fa-network-wired fa-fw mr-2"></i> Staff
               </a>
             </li>
           </ul>
@@ -168,7 +192,7 @@
       $("#sidebarToggle").trigger('click');
     });
   </script>
-  
+
 </body>
 
 </html>
