--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -12,12 +12,15 @@
 <div class="row">
   {% for course in object_list %}
   <div class="col-md-4">
-    <div class="card">
+    <div class="card border-0 shadow mb-2">
       <div class="card-body">
         <h5 class="card-title" pk="{{course.id}}">{{ course.title }}</h5>
+        <h6 class="card-subtitle small text-muted mt-1">
+          Date: {{course.created|date:"M d, Y" }}
+        </h6>
 
-        <p>
-          <a class="badge badge-info px-3 py-1 mx-1" href="{% url "course_edit" course.id %}">Edit</a>
+        <div class="mt-3 p-2 d-flex flex-row">
+          <a class="badge badge-info px-3 py-1 mx-1" href="{% url "course_edit" course.id %}">Edit Basic</a>
 
           <a class="badge badge-warning px-3 py-1  mx-1" href="{% url "course_module_update" course.id %}">Manage
             Modules</a>
@@ -25,14 +28,18 @@
           <a class="badge badge-success px-3 py-1  mx-1"
             href="{% url "module_content_list" course.modules.first.id %}">Manage Contents</a>
           {% endif %}
-        </p>
+        </div>
 
-        <p>
+        <div class="mt-1 p-2 d-flex flex-row">
+          <a class="badge badge-secondary px-3 py-1 mx-1 link-features" href="javascript:void(0);" pk="{{course.id}}">
+            Manage Features
+          </a>
+
           <a class="badge badge-primary px-3 py-1 mx-1 link-copy" href="javascript:void(0);" pk="{{course.id}}">Make
             Copy</a>
           <a class="badge badge-primary px-3 py-1 mx-1 d-none" href="{% url "quiz_course" course.id %}">Quiz</a>
           <a class="badge badge-danger px-3 py-1 mx-1" href="{% url "course_delete" course.id %}">Delete Course</a>
-        </p>
+        </div>
       </div>
     </div>
   </div>
@@ -73,6 +80,66 @@
   </div>
 </div>
 
+<div id="featureEditorModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Manage Features</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <form method="post" action="/api/course-features/" id="fmFeature">
+
+          {% csrf_token %}
+
+          <input type="hidden" class="form-control" name="course" value="" />
+
+          <div class="row">
+            <div class="col-3">
+              <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
+                  href="#list-home" role="tab" aria-controls="home">Schedule</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                  href="#list-profile" role="tab" aria-controls="profile">Learning Outcomes</a>
+                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"
+                  href="#list-messages" role="tab" aria-controls="messages">Course Notes</a>
+                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list"
+                  href="#list-settings" role="tab" aria-controls="settings">Completion Requirements</a>
+              </div>
+            </div>
+            <div class="col-9">
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                  <textarea name="schedule" class="form-control"></textarea>
+                </div>
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                  <textarea name="outcomes" class="form-control"></textarea>
+                </div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                  <textarea name="notes" class="form-control"></textarea>
+                </div>
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                  <textarea name="completion_requirements" class="form-control"></textarea>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </form>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" id="btnSaveFeatures">Save Changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 {% endblock %}
 
 
@@ -80,6 +147,8 @@
 
 <script>
   $(document).ready(function () {
+
+    initTextEditor();
 
     $(".link-copy").click(function (event) {
       event.stopPropagation();
@@ -105,8 +174,60 @@
 
     });
 
+    $(".link-features").click(function (event) {
+      event.stopPropagation();
+
+      var id = $(this).attr('pk');
+
+      if (id) {
+
+        $("#fmFeature input[name='course']").val(null);
+        $("#fmFeature textarea").val(null);
+
+        $("#fmFeature input[name='course']").val(id);
+
+        getCourseFeatures(id).then(function (response) {
+
+          if (response && response.length > 0) {
+
+            $("#fmFeature textarea[name='schedule']").val(response[0].schedule);
+            $("#fmFeature textarea[name='outcomes']").val(response[0].outcomes);
+            $("#fmFeature textarea[name='notes']").val(response[0].notes);
+            $("#fmFeature textarea[name='completion_requirements']").val(response[0]
+              .completion_requirements);
+
+            $("#fmFeature textarea[name='schedule']").summernote('code', response[0].schedule);
+            $("#fmFeature textarea[name='outcomes']").summernote('code', response[0].outcomes);
+            $("#fmFeature textarea[name='notes']").summernote('code', response[0].notes);
+            $("#fmFeature textarea[name='completion_requirements']").summernote('code', response[0]
+              .completion_requirements);
+
+          }
+
+          $("#featureEditorModal").modal({
+            'backdrop': 'static',
+            'show': true
+          });
+
+
+        });
+
+
+      }
+
+
+    });
+
+    $("#btnSaveFeatures").click(function (event) {
+      event.stopPropagation();
+
+      $("#fmFeature").submit();
+
+    });
+
+
     $('#copyModal form').ajaxForm({
-      
+
       beforeSubmit: function () {
         var load =
           '<span class="spinner-border spinner-border-sm mr-1" role="status" aria-hidden="true"></span>';
@@ -136,7 +257,52 @@
       }
     });
 
+    $('#fmFeature').ajaxForm({
+
+      beforeSubmit: function () {
+        $("#featureEditorModal button").attr('disabled', true);
+      },
+      success: function (response) {
+
+        if (response.id > 0) {
+          toastr.success('Course features has been saved.');
+        } else {
+          toastr.error('Sorry, We are failed to save the features.');
+        }
+
+        $("#featureEditorModal button").attr('disabled', false);
+
+      }
+    });
+
   });
+
+  function getCourseFeatures(courseId) {
+
+    return $.get('/api/course-features/', {
+      course: courseId
+    }, function (response) {
+      return response;
+    });
+
+  }
+
+  function initTextEditor() {
+
+    $("#fmFeature textarea[name='schedule']").summernote({
+      height: 330
+    });
+    $("#fmFeature textarea[name='outcomes']").summernote({
+      height: 330
+    });
+    $("#fmFeature textarea[name='notes']").summernote({
+      height: 330
+    });
+    $("#fmFeature textarea[name='completion_requirements']").summernote({
+      height: 330
+    });
+
+  };
 </script>
 
 {% endblock %}
