--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -12,6 +12,7 @@
   <link href="{% static "/pickadate/jquery.datetimepicker.min.css" %}" rel="stylesheet">
   <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}">
   <link href="{% static "/plugins/summernote/summernote.min.css" %}" rel="stylesheet">
+  <link href="{% static "/plugins/summernote/summernote-bs4.min.css" %}" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/logo5.png" %}">
 
@@ -113,14 +114,15 @@
 
   <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
   <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
-  <script src="{% static "/plugins/bootstrap/js/bootstrap.min.js" %}"></script>
   <script src="{% static "/plugins/popper.min.js" %}"></script>
+  <script src="{% static "/plugins/bootstrap/js/bootstrap.min.js" %}"></script>
   <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
   <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
   <script src="{% static "/plugins/moment.min.js" %}"></script>
   <script src="{% static "/plugins/handlebars.min.js" %}"></script>
   <script src="{% static "/plugins/scroll/jquery.scrollbar.min.js" %}"></script>
   <script src="{% static "/plugins/summernote/summernote.min.js" %}"></script>
+  <script src="{% static "/plugins/summernote/summernote-bs4.min.js" %}"></script>
   <script src="{% static "/plugins/jquery.form.min.js" %}"></script>
 
   <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
