--- a/app_teachers/templates/teacher_home.html
+++ b/app_teachers/templates/teacher_home.html
@@ -12,17 +12,25 @@
 <div class="row">
 
   <div class="col-xl-3">
-    <div class="card">
+    <div class="card shadow border-0">
       <div class="card-body p-0">
-        <h5 class="card-title header-title border-bottom p-3 mb-0">Overview</h5>
         <!-- stat 1 -->
         <div class="media px-3 py-4 border-bottom">
           <div class="media-body">
             <h4 class="mt-0 mb-1 font-size-22 font-weight-normal">{{courses_count}}</h4>
             <span class="text-muted">Total Courses</span>
           </div>
-          <i class="align-self-center fa fa-bug fa-lg"></i>
+          <i class="align-self-center fa fa-book fa-lg"></i>
         </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- end col-->
+
+  <div class="col-xl-3">
+    <div class="card shadow border-0">
+      <div class="card-body p-0">
 
         <!-- stat 2 -->
         <div class="media px-3 py-4 border-bottom">
@@ -30,54 +38,34 @@
             <h4 class="mt-0 mb-1 font-size-22 font-weight-normal">{{students_count}}</h4>
             <span class="text-muted">Total Students</span>
           </div>
-          <i class="align-self-center fa fa-bug fa-lg"></i>
+          <i class="align-self-center fa fa-graduation-cap fa-lg"></i>
         </div>
 
       </div>
     </div>
   </div>
+  <!-- end col-->
 
-  <div class="col-md-4">
-    <div class="card shadow mb-4">
-      <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
+</div>
+
+<div class="row">
+
+  <div class="col-xl-3 mt-2">
+    <div class="card shadow border-0">
+      <div class="card-body text-center">
+        <a class="font-weight-bold text-uppercase btn btn-info btn-block" href="/teachers/courses/">View My Courses</a>
       </div>
-      <div class="card-body">
-        <h4 class="small font-weight-bold">Server Migration <span class="float-right">20%</span></h4>
-        <div class="progress mb-4">
-          <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0"
-            aria-valuemax="100"></div>
-        </div>
-        <h4 class="small font-weight-bold">Sales Tracking <span class="float-right">40%</span></h4>
-        <div class="progress mb-4">
-          <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40"
-            aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <h4 class="small font-weight-bold">Customer Database <span class="float-right">60%</span></h4>
-        <div class="progress mb-4">
-          <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
-            aria-valuemax="100"></div>
-        </div>
-        <h4 class="small font-weight-bold">Payout Details <span class="float-right">80%</span></h4>
-        <div class="progress mb-4">
-          <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
-            aria-valuemax="100"></div>
-        </div>
-        <h4 class="small font-weight-bold">Account Setup <span class="float-right">Complete!</span></h4>
-        <div class="progress">
-          <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
-            aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+    </div>
+  </div>
+  <!-- end col-->
+
+  <div class="col-xl-3 mt-2">
+    <div class="card shadow border-0">
+      <div class="card-body text-center">
+        <a class="font-weight-bold text-uppercase btn btn-dark btn-block" href="{% url 'messages' %}">View Messages</a>
       </div>
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card">
-      <div class="card-body bg-info">
-        <a class="text-white" href="{% url 'manage_course_list' %}">View My Courses</a>
-      </div>
-    </div>
-  </div>
 </div>
 {% endblock %}
