--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -184,6 +184,12 @@
         $("#fmFeature input[name='course']").val(null);
         $("#fmFeature textarea").val(null);
 
+        $("#fmFeature textarea[name='schedule']").summernote('code', null);
+        $("#fmFeature textarea[name='outcomes']").summernote('code', null);
+        $("#fmFeature textarea[name='notes']").summernote('code', rnull);
+        $("#fmFeature textarea[name='completion_requirements']").summernote('code'
+          null);
+
         $("#fmFeature input[name='course']").val(id);
 
         getCourseFeatures(id).then(function (response) {
