--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -186,8 +186,8 @@
 
         $("#fmFeature textarea[name='schedule']").summernote('code', null);
         $("#fmFeature textarea[name='outcomes']").summernote('code', null);
-        $("#fmFeature textarea[name='notes']").summernote('code', rnull);
-        $("#fmFeature textarea[name='completion_requirements']").summernote('code'
+        $("#fmFeature textarea[name='notes']").summernote('code', null);
+        $("#fmFeature textarea[name='completion_requirements']").summernote('code',
           null);
 
         $("#fmFeature input[name='course']").val(id);
